--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,4 @@
 {
-  "name": "react-wordpress-example",
-  "version": "0.0.0",
-  "description": "An example using react to fetch data from wordpress",
-  "main": "main.js",
   "dependencies": {
     "jquery": "^2.1.3",
     "jsx-loader": "^0.12.2",
@@ -16,10 +12,8 @@
     "react-style": "^0.3.1",
     "request": "^2.51.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "jsx-loader": "~0.11.0",
+    "webpack": "~1.4.0-13"
+  }
 }
